<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:background="@drawable/rounded_dialog"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="top|center"
                    android:paddingStart="5dp"
                    android:text="@string/logoutConfirm"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/remove"
                    android:text="@string/no"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:visibility="visible" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/validateButton"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/color_accent"
                    android:text="@string/yes"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:visibility="visible" />
            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>