<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="28sp"
            android:layout_marginBottom="@dimen/_70sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <sebastien.andreu.esimed.shared.custom.CustomEditTextRounded
                android:id="@+id/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                app:title="Email"
                app:titleColor="@color/black"
                app:editTextBackgroundColor="#FFFFFF"
                app:editTextBorderColor="@color/orange"
                app:titleMargin="@dimen/_25sdp"
                app:editTextColor="@color/black"
                app:editTextHeight="@dimen/_45sdp"
                app:editTextSize="@dimen/_5sdp" />


            <sebastien.andreu.esimed.shared.custom.CustomEditTextRounded
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:title="Mot de passe"
                app:titleColor="@color/black"
                app:editTextBackgroundColor="#FFFFFF"
                app:editTextBorderColor="@color/orange"
                app:titleMargin="@dimen/_25sdp"
                app:editTextColor="@color/black"
                app:editTextHeight="@dimen/_45sdp"
                app:editTextSize="@dimen/_5sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_45sdp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/loginButton"
                android:layout_marginBottom="@dimen/_5sdp"/>

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_45sdp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/register" />
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>